<resources>
    <string name="app_name">Eqsoft</string>
    <string name="dbinspector_app_name">EqSoft DB</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_sales">Total Sales</string>
    <string name="amount_received">Amount Received</string>
    <string name="amount_pending">Amount Pending</string>
    <string name="receipts">Receipts</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="sync_by_usb">Sync by USB</string>
    <string name="sync_by_web">Sync by WEB</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="type_to_search">Type to search</string>
    <string name="balance">Balance</string>
    <string name="customer">Customer</string>
    <string name="total_amount">Total Amount</string>
    <string name="stock">Stock</string>
    <string name="selling_price">Selling Price</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="previous_balance">Previous Balance</string>
    <string name="add_more">Add more +</string>
    <string name="advance">Advance</string>
    <string name="proceed">Proceed</string>
    <string name="order">Order</string>
    <string name="done">Done</string>
    <string name="received_amount">Received Amount</string>
    <string-array name="customer_sort">
        <item>Name</item>
        <item>Route</item>
    </string-array>
    <string-array name="product_sort">
        <item>Name</item>
        <item>Category</item>
    </string-array>

    <string name="select_sync_type">Select sync type</string>
    <string name="select_your_customer">Select your customer</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="total_orders">Total Orders</string>
    <string name="remove_item">Remove Item</string>
    <string name="clear_all">Clear All</string>
    <string name="checkout">Checkout</string>
    <string name="welcome">Welcome</string>
    <string name="clear_text">Clear text</string>
    <string name="sp">SP :</string>
</resources>
