<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/GM_usbSync"
                android:icon="@drawable/ic_usb_black_24dp"
                android:title="@string/sync_by_usb" />
            <item
                android:id="@+id/GM_webSync"
                android:icon="@drawable/ic_wifi_tethering_black_24dp"
                android:title="@string/sync_by_web" />
            <item
                android:id="@+id/GM_changePassword"
                android:icon="@drawable/ic_key_change"
                android:title="@string/change_password"
                android:visible="false" />
            <item
                android:id="@+id/GM_logout"
                android:icon="@drawable/ic_logout_black_24dp"
                android:title="@string/logout" />
            <item
                android:id="@+id/GM_clearAll"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/clear_all" />
        </menu>
    </item>
</menu>