<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rkr.binatestation.eqsoft.activities.ReceiptsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="end"
            app:popupTheme="@style/AppTheme.Light.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_widget_margin"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_widget_margin"
                android:orientation="horizontal">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/AR_customerLedgerName"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_your_customer" />

                    <TextView
                        android:id="@+id/AR_customerMobile"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end" />
                </android.support.v7.widget.LinearLayoutCompat>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_button_oval_dark"
                    android:contentDescription="@string/customers"
                    android:onClick="showSearchDialog"
                    android:src="@drawable/ic_arrow_drop_down_white_24dp" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/AR_balance"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_widget_margin"
            android:background="@drawable/bg_edit_text_light"
            android:gravity="center_vertical"
            android:hint="@string/balance"
            android:minHeight="50dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_widget_margin"
            android:focusableInTouchMode="true"
            android:theme="@style/AppTheme.EditText">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/received_amount"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/bg_button_dark"
            android:text="@string/done" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.design.widget.CoordinatorLayout>
