<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="end"
            app:popupTheme="@style/AppTheme.Light.PopupOverlay">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/AP_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:entries="@array/product_sort"
                app:popupTheme="@style/AppTheme.Light.PopupOverlay" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.SearchView
            android:id="@+id/AP_productSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_button_light"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:queryHint="@string/type_to_search"
            app:iconifiedByDefault="false" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Ap_productsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_widget_margin"
                android:paddingStart="@dimen/activity_widget_margin"
                app:popupTheme="@style/AppTheme.Light.PopupOverlay">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/AP_customerLedgerName"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectCustomer" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectCustomer"
                        android:text="@string/customer" />

                </android.support.v7.widget.LinearLayoutCompat>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_widget_margin"
                    android:background="@android:color/white" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/AP_totalAmount"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amount" />

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.design.widget.AppBarLayout>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:onClick="checkOut"
        android:src="@drawable/ic_send_white_24dp"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@color/light_shade"
        app:layout_behavior="rkr.binatestation.eqsoft.utils.FABScrollBehavior" />
</android.support.design.widget.CoordinatorLayout>
